src/objects/JIRA_Device__c.object
<CustomObject>
    <description>JIRA Relationship; this is a custom object that transposes the 3 JIRA data objects (_Prod) into mappable field elements</description>
    <fields>
        <fullName>Blur_Version__c</fullName>
        <label>Blur Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Fingerprint__c</fullName>
        <label>Build Fingerprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Device Details</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>JIRA Devices</relationshipLabel>
        <relationshipName>JIRA_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importing_Date__c</fullName>
        <description>Integration Importing Date</description>
        <label>Importing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <label>Issue_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_KIT_ID__c</fullName>
        <label>SW KIT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SW Kit details</description>
        <inlineHelpText>SW Kit details</inlineHelpText>
        <label>SW_Kit</label>
        <referenceTo>SW_Kit__c</referenceTo>
        <relationshipLabel>JIRA Devices</relationshipLabel>
        <relationshipName>JIRA_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_From_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated From SF</label>
        <type>Checkbox</type>
    </fields>
    <label>JIRA Device</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Blur_Version__c</columns>
        <columns>Build_Fingerprint__c</columns>
        <columns>Device__c</columns>
        <columns>Importing_Date__c</columns>
        <columns>Issue_ID__c</columns>
        <columns>SW_KIT_ID__c</columns>
        <columns>UniqueID__c</columns>
        <columns>Updated_From_SF__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_ID__c</field>
            <operation>contains</operation>
            <value>2112019</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JD-{00000000}</displayFormat>
        <label>Jira Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIRA Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>